# chainlist

./: .gitignore  Cargo.toml  Justfile  README.md
.config/: zepter.toml
.github/workflows/: ci.yml  no_std.yml  release.yml  zepter.yml
scripts/: check_no_std.sh
src/: chain.rs  lib.rs  list.rs  macros.rs
static/: chainlist.json
