[package]
name = "chainlist"
description = "Minimal `no_std` bindings for the Chainlist API."
version = "0.1.0"
edition = "2024"
license = "MIT"
rust-version = "1.85"
authors = ["refcell"]
homepage = "https://github.com/refcell/chainlist"
repository = "https://github.com/refcell/chainlist"
keywords = ["ethereum", "chainlist", "alloy", "rpc"]
categories = ["cryptography", "cryptography::cryptocurrencies"]
exclude = ["**/target"]

[dependencies]
lazy_static = { version = "1.5.0", default-features = false, features = ["spin_no_std"] }
serde_json = { version = "1.0.140", features = ["alloc"], default-features = false }
serde = { version = "1.0.219", features = ["derive", "alloc"], default-features = false }
alloy-chains = { version =  "0.2.0", default-features = false }

# `online` feature flag
reqwest = { version = "0.12.15", features = ["json"], default-features = false, optional = true }

[features]
default = []
online = ["dep:reqwest"]
std = ["serde/std", "alloy-chains/std"]

[dev-dependencies]
reqwest = { version = "0.12.15", features = ["multipart", "json"] }
tokio = { version = "1.44.2", features = ["full"] }
